--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <script>
     // GitHub API info
-    const username = 'your-github-username';
+    const username = 'papaj2173';
     const repo = 'input-to-file';  // Replace with your repository name
     const filePath = 'data.txt';   // File where the data will be saved
     const accessToken = 'your-personal-access-token';  // GitHub Personal Access Token
